--- a/src/index.css
+++ b/src/index.css
@@ -38,11 +38,11 @@ label{
     display: block;
     width: 30px;
     height: 30px;
-    border: 1px solid var(—primary);
+    border: 1px solid var(--primary);
     border-radius: 50%;
     margin: 10px auto;
     line-height: 30px;
-    color: var(—primary);
+    color: var(--primary);
     font-weight: bold;
     font-size: 24px;
 }
@@ -52,7 +52,7 @@ label input{
     opacity: 0;
 }
 label:hover{
-    background: var(—primary);
+    background: var(--primary);
     color: white;
 }
 .output{
@@ -60,13 +60,13 @@ label:hover{
     font-size: 0.8rem;
 }
 .error{
-    color: var(—error);
+    color: var(--error);
 }
 
 /* progress bar styles */
 .progress-bar{
     height: 5px;
-    background: var(—primary);
+    background: var(--primary);
     margin-top: 20px;
 }
 
